tests/compiletests/ui/lang/abi/scalar_pair/compute_value_pair_fail.stderr
error: compute entry parameter `w` must be by-reference
 --> $DIR/compute_value_pair_fail.rs:8:8
  |
8 |     w: (u32, u32),
  |        ^^^^^^^^^^
  |
  = help: consider changing the type to `&(u32, u32)`

error: aborting due to 1 previous error

